# WeTune

./: .gitignore  AGENTS.md  TODOS.md  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
api/: playlist.js  playlist.ts  search.js  search.ts  songs.js
scripts/: blobs-delete.js  blobs.js
server/api/: playlist.ts  search.ts  song-blob.ts  songs.ts
server/data/: cookies.ts  youtubeCredentials.ts
server/edge/: song-blob.ts  tsconfig.json
server/lib/: youtube.ts
server/parsers/: youtube.ts
server/services/: player.ts  player_old.ts  youtube.ts
src/: app.tsx  consts.ts  index.css  index.tsx  youtube.server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/collections/: playlist.ts
src/components/: AudioPlayer.tsx  IconLabel.tsx  ShareSongButton.tsx  SongItem.tsx  Thumbnail.tsx  Toaster.tsx
src/config/: index.ts
src/context/: playlist.tsx
src/db/: index.ts  schema.ts
src/hooks/: audio.ts  cache.ts  createAudio.ts  createMediaSession.ts  createPersistedSignal.ts  createToast.ts  useMediaSession.ts  useShare.ts
src/i18n/: i18n-types.ts  i18n-util.async.ts  i18n-util.sync.ts  i18n-util.ts
src/layouts/: main.tsx
src/lib/: cookie.ts
src/pages/: 404.tsx  home.tsx  results.data.ts  results.tsx
src/router/: loaders.ts  routes.ts  routes.tsx
src/services/: cache.ts
src/temp/: cookie.ts  player_new.ts
src/types/: playlist.d.ts
src/utils/: device.ts  event.ts  events.ts  fetch.ts  i18n.ts  id.ts  (+2 more)
(+35 files in other folders)
