[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0.147"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2.7.1"
tauri-plugin-http = { version = "2.5.4", features = ["unsafe-headers"] }
